@@ -41,7 +41,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Resource handler registry.
@@ -55,7 +54,7 @@ public final class ResourceHandlerRegistry {
     
     static {
         REGISTERED_RESOURCES = createRegisteredResources(
-                ShardingSphereServiceLoader.getServiceInstances(MCPHandlerProvider.class).stream().flatMap(each -> each.getResourceHandlers().stream()).collect(Collectors.toList()));
+                ShardingSphereServiceLoader.getServiceInstances(MCPHandlerProvider.class).stream().flatMap(each -> each.getResourceHandlers().stream()).toList());
         validateRegisteredResources();
         REGISTERED_RESOURCE_DESCRIPTORS = createRegisteredResourceDescriptors();
         validateRegisteredResourceDescriptors();
