@@ -23,7 +23,6 @@ import lombok.RequiredArgsConstructor;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * MCP schema metadata.
@@ -58,8 +57,8 @@ public final class MCPSchemaMetadata {
      */
     public MCPSchemaMetadata createDetail() {
         return new MCPSchemaMetadata(database, schema,
-                tables.stream().map(MCPTableMetadata::createSummary).sorted(Comparator.comparing(MCPTableMetadata::getTable)).collect(Collectors.toList()),
-                views.stream().map(MCPViewMetadata::createSummary).sorted(Comparator.comparing(MCPViewMetadata::getView)).collect(Collectors.toList()),
-                sequences.stream().map(MCPSequenceMetadata::createSummary).sorted(Comparator.comparing(MCPSequenceMetadata::getSequence)).collect(Collectors.toList()));
+                tables.stream().map(MCPTableMetadata::createSummary).sorted(Comparator.comparing(MCPTableMetadata::getTable)).toList(),
+                views.stream().map(MCPViewMetadata::createSummary).sorted(Comparator.comparing(MCPViewMetadata::getView)).toList(),
+                sequences.stream().map(MCPSequenceMetadata::createSummary).sorted(Comparator.comparing(MCPSequenceMetadata::getSequence)).toList());
     }
 }
